[workspace]
members = ["flowr", "flowc", "flowstdlib", "flowrlib", "flowcore", "flowmacro", "flowsamples"]
default-members = ["flowr", "flowc", "flowstdlib", "flowrlib", "flowcore", "flowmacro", "flowsamples"]

[workspace.package]
version = "0.90.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition = "2021"

[profile.dev]
split-debuginfo = "unpacked"