[workspace]
members = ["flowc", "flowstdlib", "flowr", "flowcore", "flowmacro"]
default-members = ["flowc", "flowstdlib", "flowr", "flowcore", "flowmacro"]
resolver = "2"

[workspace.package]
version = "0.142.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
license = "MIT"
license-file = "LICENSE"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition = "2021"

[profile.dev]
split-debuginfo = "unpacked"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for "cargo release" to work with a Virtual Workspace with Unified Version number across packages
[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"]
