[workspace]
members = ["flowc", "flowstdlib", "flowr", "flowcore", "flowmacro", "flowedit"]
default-members = ["flowc", "flowstdlib", "flowr", "flowcore", "flowmacro", "flowedit"]
resolver = "2"

[workspace.package]
version = "1.1.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
license = "MIT"
license-file = "LICENSE"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition = "2021"

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

# Config for "cargo release" to work with a Virtual Workspace with Unified Version number across packages
[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
result_large_err = "allow"
indexing_slicing = "deny"