[package]
name = "flow_impl"
description = "Definition of an Implementation trait for flow functions, and a derive macro"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow_impl/README.md"
homepage = "https://github.com/andrewdavidmackenzie/flow_impl/README.md"
repository = "https://github.com/andrewdavidmackenzie/flow/"
version = "0.8.1"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
