[package]
name = "flow_impl"
description = "Definition of an Implementation trait for flow functions, and a derive macro"
license = "MIT"
documentation = "http://andrewdavidmackenzie.github.io/flow/"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
version = "0.8.2"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
