[package]
name = "flow_impl_derive"
description = "Definition of a derive macro for FlowImpl"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/flow_impl_derive/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "https://github.com/andrewdavidmackenzie/flow/README.md"
version = "0.8.1"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.14.4"
quote = "0.6.3"