[package]
name = "flow_impl_derive"
version = "0.34.7"
description = "Definition of a derive macro for FlowImpl"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/flow_impl_derive/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
syn = "~1.0"
quote = "~1.0"
