[package]
name = "flow_macro"
version = "0.40.1"
description = "Definition of a 'flow' attribute macro to help write implementations"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/flow_macro/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
syn = "~1.0"
quote = "~1.0"
flowcore = {path = "../flowcore", version = "0.40.1"}
toml = "0.5.8"