[package]
name = "flowc"
description = "A compiler for 'flow' programs"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
edition.workspace = true

[lints]
workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "flowrclib"
path = "src/lib/lib.rs"

[[bin]]
name = "flowc"
path = "src/bin/flowc/main.rs"

[features]
default = ["debugger"]
debugger = ["flowcore/debugger"] # feature to add output for the debugger

[dependencies]
flowcore = {path = "../flowcore", version = "0.142.0", features = ["context", "file_provider", "http_provider", "meta_provider"]}
clap = "~4"
env_logger = "0.11.5"
log = "0.4.22"
url = { version = "2.2", features = ["serde"] }
tempfile = "3"
simpath = { version = "~2.5", features = ["urls"]}
wax = "0.6.0"
serde_json = "1.0"
error-chain = "0.12.2"
serde_derive = "~1.0.27"
serde = "~1.0.206"
colored = "2"
toml = { version = "0.8.19" }

[dev-dependencies]
flowcore = {path = "../flowcore", version = "0.142.0", features = ["context"]}
tempfile = "3"
simpath = { version = "~2.5", features = ["urls"]}
serial_test = "3.1.1"
