[package]
name = "flowc"
description = "A compiler for 'flow' programs"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
edition.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/flow-{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.packager]
product-name = "flowc"
identifier = "net.mackenzie-serres.flowc"
icons = ["../assets/icons/icon.png", "../assets/icons/icon.icns", "../assets/icons/icon.ico"]

[lints]
workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "flowrclib"
path = "src/lib/lib.rs"

[[bin]]
name = "flowc"
path = "src/bin/flowc/main.rs"

[features]
default = ["debugger", "graph"]
debugger = ["flowcore/debugger"] # feature to add output for the debugger
graph = ["svg"] # feature to enable SVG graph output with -g flag

[dependencies]
flowcore = {path = "../flowcore", version = "1.1.0", features = ["context", "file_provider", "http_provider", "meta_provider"]}
svg = { version = "0.18", optional = true }
clap = "~4"
env_logger = "0.11.10"
log = "0.4.32"
url = { version = "2.2", features = ["serde"] }
tempfile = "3"
simpath = { version = "~2.5", features = ["urls"]}
globwalk = "0.9.1"
serde_json = "1.0"
error-chain = "0.12.2"
serde_derive = "~1.0.27"
serde = "~1.0.228"
colored = "3"
toml = { version = "1.1.2" }

[dev-dependencies]
flowcore = {path = "../flowcore", version = "1.1.0", features = ["context"]}
tempfile = "3"
simpath = { version = "~2.5", features = ["urls"]}
serial_test = "3.5.0"
