[package]
name = "flowclib"
version = "0.7.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "A library for compiling 'flow' programs used by the 'flowc' compiler"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "https://github.com/andrewdavidmackenzie/flow/README.md"
repository = "https://github.com/andrewdavidmackenzie/flow/"
license = "MIT"

[lib]
name = "flowclib"
path = "src/lib.rs"

test = true
doctest = true
bench = true
doc = true

[dependencies]
flowrlib = { path = "../flowrlib", version = "~0.7.0" }
yaml-rust = "~0.3.5"
toml = "0.4"
serde_derive = "~1.0.27"
serde = "~1.0.27"
erased-serde = "*"
log = "0.3.8"
strfmt = "0.1.5"
url = "*"
serde_json = "1.0"

[dev-dependencies]
tempdir = "~0.3.5"