[package]
name = "flowclib"
version = "0.7.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "A library for compiling 'flow' programs used by the 'flowc' compiler"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "https://github.com/andrewdavidmackenzie/flow/README.md"
repository = "https://github.com/andrewdavidmackenzie/flow/"
license = "MIT"

edition = "2018"

[lib]
name = "flowclib"
path = "src/lib.rs"

test = true
doctest = true
bench = true
doc = true

[features]
default = ["debugger"]
debugger = []

[dependencies]
flowrlib = { path = "../flowrlib", version = "~0.7.0" }
serde_yaml = "~0.8"
toml = "0.4"
serde_derive = "~1.0.27"
serde = "~1.0.27"
erased-serde = "*"
log = "0.4.6"
strfmt = "0.1.5"
serde_json = "1.0"
shrinkwraprs = "0.2.1"

[dev-dependencies]
tempdir = "~0.3.5"
url = "*"