[package]
name = "flowclilib"
version = "0.7.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "A library to be linked with generated code for execution of flow projects"
license = "MIT"

[lib]
name = "flowclilib"
path = "src/lib.rs"

test = true
doctest = true
bench = true
doc = true

[dependencies]
log = "0.3.8"
simplog = "1.0.3"
clap = "~2.27.1"