[package]
name = "flowcore"
version = "0.60.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "Structures shared between runtime and clients"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "https://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition = "2021"

# Files to exclude from packaging and publishing
exclude = [".gitignore", "Cargo.lock"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "flowcore"
path = "src/lib.rs"

[features]
default = []  # by default include code not just the trait definition
context = []  # whether this library is aware of the flow context or not
debugger = [] # feature to add the debugger
online_tests = []

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_derive = { version = "~1.0.27"}
error-chain = {version = "0.12.2"}
url = { version = "2.2", features = ["serde"] }
log = {version = "0.4.6"}
shrinkwraprs = { version = "0.3.0" }
serde = { version = "~1.0.141"}
toml = { version = "0.5.8" }
serde_yaml = { version = "~0.9" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
curl = {version = "~0.4" }
simpath = { version = "~2.3", features = ["urls"] }
