[package]
name = "flowcore"
description = "Structures shared between runtime and clients"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true

# Files to exclude from packaging and publishing
exclude = [".gitignore", "Cargo.lock"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "flowcore"
path = "src/lib.rs"

[features]
default = []
context = []  # whether this library is aware of the flow context functions or not
debugger = [] # feature to add the debugger
online_tests = []
meta_provider = []
file_provider = []
http_provider = []
p2p_provider = ["libp2p"]

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_derive = { version = "~1.0.27"}
error-chain = {version = "0.12.2"}
url = { version = "2.2", features = ["serde"] }
log = {version = "0.4.6"}
shrinkwraprs = { version = "0.3.0" }
serde = { version = "~1.0.147"}
toml = { version = "0.5.8" }
serde_yaml = { version = "~0.9" }

libp2p = {version = "0.44.0", features = ["mdns"], optional = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
curl = {version = "~0.4" }
simpath = { version = "~2.3", features = ["urls"] }
