[package]
name = "flowdb"
description = "A debugger client for 'flow' programs"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
edition.workspace = true

[lints]
workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "flowdblib"
path = "src/lib/lib.rs"

[[bin]]
name = "flowdb"
path = "src/bin/flowdb/main.rs"

[dependencies]
clap = "~4"
log = "0.4.31"
env_logger = "0.11.10"
error-chain = "0.12.2"
