[package]
name = "flowdb"
description = "A debugger client for 'flow' programs"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
edition.workspace = true

[lints]
workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "flowdblib"
path = "src/lib/lib.rs"

[[bin]]
name = "flowdb"
path = "src/bin/flowdb/main.rs"

[dependencies]
flowcore = {path = "../flowcore", version = "1.0.0", features = ["debugger"] }
flowr = {path = "../flowr", version = "1.0.0" }
clap = "~4"
log = "0.4.31"
env_logger = "0.11.10"
error-chain = "0.12.2"
serde_derive = "~1.0"
serde = "~1.0"
serde_json = { version = "1.0", default-features = false }
zmq = "0.10.0"

[dev-dependencies]
portpicker = "0.1.1"
serial_test = "3.5.0"
