[package]
name = "flowedit"
description = "Visual editor for 'flow' programs"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "flowedit"
path = "src/main.rs"

[dependencies]
flowcore = { path = "../flowcore", version = "0.142.0", features = ["meta_provider", "context", "file_provider"] }
flowrclib = { package = "flowc", path = "../flowc", version = "0.142.0" }
flowrlib = { package = "flowr", path = "../flowr", version = "0.142.0" }
flowstdlib = { path = "../flowstdlib", version = "0.142.0" }
clap = "~4"
iced = { version = "0.14.0", features = ["canvas", "tokio", "image"] }
simpath = { version = "~2.5", features = ["urls"] }
url = { version = "2.2", features = ["serde"] }
serde_json = { version = "1.0", default-features = false }
serde_derive = "~1.0"
serde = "~1.0"
log = "0.4"
env_logger = "0.11"
rfd = "0.12"
zmq = "0.10.0"
mdns-sd = { version = "0.19", default-features = false }
portpicker = "0.1.1"
tokio = { version = "1", features = ["sync"] }
error-chain = "0.12.2"
