[package]
name = "flowgraph"
version = "0.95.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2021"
description = "Graph layout and SVG rendering for flow programs"

[lints]
workspace = true

[dependencies]
flowcore = { path = "../flowcore", version = "0.95.0" }
svg = "0.18"
log = "0.4"
url = "2.2"
