[package]
name = "flowide"
version = "0.21.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2018"
description = "A (WIP) IDE for 'flow' programs"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"

[[bin]]
name = "flowide"
path = "src/main.rs"

[features]
default = ["debugger", "metrics"]
debugger = []
metrics = []  # feature for tracking of metrics during execution

[dependencies.flowrstructs]
path = "../flowrstructs"
features = ["debugger"]

[dependencies]
flow_impl = "0.21.0"
flowc = {path = "../flowc"}
flowr = {path = "../flowr"}
flowstdlib = {path = "../flowstdlib"}
provider = {path = "../provider"}
toml = "0.4"
url = "~2.1"
serde_json = "1.0"
log = "0.4.6"
lazy_static = "1"
gtk-rs-state = "0.3"
cairo-rs = "0.8"
gdk = "0.12"
gdk-pixbuf = "0.8"
gio = "0.8"
glib = "0.9"
gtk = "0.8"
pango = "0.8"
image = "=0.23.10"
