[package]
name = "flowmacro"
description = "Definition of a 'flow' attribute macro to help write implementations"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
syn = { version = "~1.0", features =["full"] } #Full is required for ItemFn in macro parsing
quote = "~1.0"
flowcore = {path = "../flowcore", version = "0.90"}
toml = "0.5.8"
proc-macro2 = "1.0"

[dev-dependencies]
serde_json = { version = "1.0", default-features = false }

