[package]
name = "flowmacro"
description = "Definition of a 'flow' attribute macro to help write implementations"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition.workspace = true

[lints]
workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
syn = { version = "~2.0", features =["full"] } #Full is required for ItemFn in macro parsing
quote = "~1.0"
flowcore = {path = "../flowcore", version = "0.142.0" }
toml = "0.8.19"
proc-macro2 = "1.0"

[dev-dependencies]
serde_json = { version = "1.0", default-features = false }

