[package]
name = "flowr"
description = "Runners for compiled 'flow' programs"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
edition.workspace = true
lints.workspace = true

[lints]
workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "flowrlib"
path = "src/lib/lib.rs"

[[bin]]
name = "flowrcli"
path = "src/bin/flowrcli/main.rs"

[[bin]]
name = "flowrgui"
path = "src/bin/flowrgui/main.rs"

[[bin]]
name = "flowrex"
path = "src/bin/flowrex/main.rs"

[features]
default = ["debugger", "metrics", "context", "submission", "flowstdlib"]
# feature to add the debugger, requires flowcore crate to have feature enabled also, rustyline optional dependency too
debugger = ["flowcore/debugger", "rustyline"]
# feature for tracking of metrics during execution
metrics = []
# feature to include ability to receive a submission of a flow
submission = []
# feature to include context functions, make sure flowcore is compiled with it if we plan to use it
context = ["flowcore/context"]

[dependencies]
flowcore = {path = "../flowcore", version = "0.142.0", features = ["context", "file_provider", "http_provider",
        "context", "meta_provider"] }
flowstdlib = {path = "../flowstdlib", version = "0.142.0", optional = true }
clap = "~4"
log = "0.4.20"
env_logger = "0.10.2"
simpath = { version = "~2.5", features = ["urls"]}
url = { version = "2.2", features = ["serde"] }
serde_derive = "~1.0"
serde = "~1.0"
serde_json = { version = "1.0", default-features = false }
error-chain = "0.12.2"
multimap = "~0.10"
portpicker = "0.1.1"
zmq = "0.10.0"
image = "=0.24.8"
simpdiscover = "0.6.2"

# for flowrlib
rand = "0.8"
wasmtime = { version = "16.0.0", default-features = false, features = ["cranelift"] }

# for flowrgui
iced = { version = "0.10.0", features = ["canvas", "tokio", "debug", "image"] }
iced_aw = { version = "0.7.0", default-features = false, features = ["tabs", "card", "modal",] }
iced_native = "0.10.3"
once_cell = "1.18.0"
tokio = { version = "1", features = ["sync"] }

# Optional dependencies
rustyline = {version = "13.0.0", optional = true } # for debugger

[dev-dependencies]
tempdir = "~0.3.5"
serial_test = "3.0.0"
portpicker = "0.1.1"
# These two are needed for examples
flowr-utilities = { path = "utilities" }
flowstdlib = {path = "../flowstdlib", version = "0.142.0" }
