[package]
name = "flowr"
description = "Runners for compiled 'flow' programs"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
edition.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/flow-{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.packager]
product-name = "flowr"
identifier = "net.mackenzie-serres.flowr"
binaries = [
    { path = "flowrcli", main = true },
    { path = "flowrgui" },
    { path = "flowrex" },
    { path = "flowrdb" },
]
icons = ["assets/icons/icon.png", "assets/icons/icon.icns", "assets/icons/icon.ico"]

[package.metadata.packager.deb]
depends = ["libzmq5"]

[lints]
workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "flowrlib"
path = "src/lib/lib.rs"

[[bin]]
name = "flowrcli"
path = "src/bin/flowrcli/main.rs"

[[bin]]
name = "flowrgui"
path = "src/bin/flowrgui/main.rs"

[[bin]]
name = "flowrex"
path = "src/bin/flowrex/main.rs"

[[bin]]
name = "flowrdb"
path = "src/bin/flowrdb/main.rs"
required-features = ["debugger"]

[features]
default = ["debugger", "metrics", "context", "submission", "flowstdlib"]
# feature to add the debugger, requires flowcore crate to have feature enabled also, rustyline optional dependency too
debugger = ["flowcore/debugger", "rustyline"]
# feature for tracking of metrics during execution
metrics = []
# feature to include ability to receive a submission of a flow
submission = []
# feature to include context functions, make sure flowcore is compiled with it if we plan to use it
context = ["flowcore/context"]

[package.metadata.cargo-all-features]
max_combination_size = 2
skip_optional_dependencies = true

[dependencies]
flowcore = {path = "../flowcore", version = "1.1.0", features = ["context", "file_provider", "http_provider",
        "context", "meta_provider"] }
flowstdlib = {path = "../flowstdlib", version = "1.1.0", optional = true }
clap = "~4"
log = "0.4.32"
env_logger = "0.11.10"
simpath = { version = "~2.5", features = ["urls"]}
url = { version = "2.2", features = ["serde"] }
serde_derive = "~1.0"
serde = "~1.0"
serde_json = { version = "1.0", default-features = false }
error-chain = "0.12.2"
portpicker = "0.1.1"
zmq = "0.10.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
mdns-sd = { version = "0.20", default-features = false }

# for flowrlib
rand = "0.10"
wasmtime = { version = "45.0.1", default-features = false, features = ["runtime", "cranelift"] }

# for flowrgui
iced = { version = "0.14.0", default-features = false, features = ["canvas", "tokio", "debug", "wgpu", "tiny-skia", "image", "wayland", "x11", "unconditional-rendering"] }
iced_aw = { version = "0.14.1", default-features = false, features = ["tabs", "card"] }
once_cell = "1.21.4"
rfd = "0.17"
tokio = { version = "1", features = ["sync"] }

# Optional dependencies
rustyline = {version = "18.0.0", optional = true } # for debugger - used by flowrgui debug client

[dev-dependencies]
tempfile = "3"
serial_test = "3.5.0"
portpicker = "0.1.1"
iced_test = "0.14.0"
# These two are needed for examples
flowr-utilities = { path = "utilities" }
flowstdlib = {path = "../flowstdlib", version = "1.1.0" }
