[package]
name = "flowrex"
description = "A minimal executor for flowr jobs"
version = "0.70.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "flowrex"
path = "src/main.rs"

[features]
default = ["flowstdlib"]

[dependencies]
# Build a minimal flowcore crate with just a p2p_provider in it
flowcore = {path = "../flowcore", version = "0.70.0", default-features = false, features = ["p2p_provider"]}
flowrlib = {path = "../flowrlib", version = "0.70.0"}
flowstdlib = {path = "../flowstdlib", version = "0.70.0", optional = true }
simplog = { version = "~1.5" }
clap = "~3"
log = "0.4.6"
url = "2.2"
serde_derive = "~1.0.27"
serde = "~1.0.145"
serde_json = { version = "1.0", default-features = false }
error-chain = "0.12.2"
multimap = "~0.8"

[dev-dependencies]
tempdir = "~0.3.5"
serial_test = "0.9.0"

[workspace]
exclude = [".."]
