[package]
name = "flowrex"
description = "A minimal executor for flowr jobs"
version = "0.90"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "flowrex"
path = "src/main.rs"

[features]
default = ["flowstdlib"]

[dependencies]
flowcore = {path = "../flowcore", version = "0.90"}
flowrlib = {path = "../flowrlib", version = "0.90"}
flowstdlib = {path = "../flowstdlib", version = "0.90", optional = true }
simplog = { version = "~1.5" }
simpath = { version = "~2.3", features = ["urls"]}
clap = "~4"
log = "0.4.6"
url = "2.2"
error-chain = "0.12.2"

[workspace]
exclude = [".."]
