[package]
name = "flowrex"
description = "A minimal executor for flow runtime jobs"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
edition.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "flowrex"
path = "src/main.rs"

[features]
default = ["flowstdlib"]

[dependencies]
flowcore = {path = "../flowcore", version = "0.95.0" }
flowrlib = {path = "../flowrlib", version = "0.95.0" }
flowstdlib = {path = "../flowstdlib", version = "0.95.0", optional = true }
env_logger = "0.10.0"
simpath = { version = "~2.4", features = ["urls"]}
clap = "~4"
log = "0.4.6"
url = "2.2"
error-chain = "0.12.2"
simpdiscover = "0.6.2"
