[package]
name = "flowrlib"
version = "0.8.8"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
license = "MIT"
description = "The run-time library for executing 'flow' programs compiled with the 'flowc' compiler"
readme = "README.md"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
edition = "2018"

[lib]
name = "flowrlib"
path = "src/lib.rs"

[features]
default = []  # Don't include any extra features by default
metrics = []  # feature for tracking of metrics during execution
debugger = [] # feature to add the debugger
checks = []   # feature to perform extra checks during flow execution

[dependencies]
flow_impl = "=0.10.0"
multimap = "~0.8"
url = "~2.1"
log = "0.4.6"
serde_derive = "~1.0.27"
serde = "~1.0.27"
serde_json = "1.0"
error-chain = "0.12.2"
wasmi = "0.4.5"

[target.'cfg(not(wasm32))'.dependencies]
ctrlc = "3.1.4"
